# colorbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: SUPPORT.md
dep/cimgui/: cimgui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h
dep/cimgui/backend_test/example_sdl_opengl3/: CMakeLists.txt  main.c
dep/cimgui/generator/: cimgui_template.h
dep/cimgui/generator/output/: definitions.json  definitions.lua
dep/cimgui/imgui/: imgui_demo.cpp
res/: shader.frag  shader.vert
src/: main.c
